--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/formidable": "^3.4.5",
+    "@types/uuid": "^10.0.0",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
     "next": "15.0.0-canary.56",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
@@ -21,6 +25,7 @@
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.1",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
